@@ -64,6 +64,9 @@ Avro 1.7.2 (unreleased)
     AVRO-1158. C: Fixed infinite loop in deflate decompression codec.
     (Lucas Martin-King via dcreager)
 
+    AVRO-1159. C: Check union discriminants in avro_value_read.
+    (Lucas Martin-King via dcreager)
+
 Avro 1.7.1 (16 July 2012)
 
   NEW FEATURES
